[package]
name = "rparif-influxdb"
version = "0.1.0"
authors = ["Dalvany <Dalvany@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rparif = "0.1"
args = "2.0"
getopts = "0.2"
chrono = "0.4"
reqwest = { version = "0.10", features = ["blocking"] }
json = "0.12"
titlecase = "1.0"